[package]
description = "Serializers"
edition = "2021"
name = "ser"
version = "0.0.1"

[[bin]]
bench = false
name = "ser"

[dependencies]
#abomonation = "0.7.3"
#abomonation_derive = { version = "0.5.0", path = "../../../abomonation_derive" }
#rkyv = { version = "0.7.39" }
#serde = { version = "1.0.133", features = ["derive"] }
#serde_json = "1"
swc_common = { version = "0.23.0", path = "../swc_common" }
swc_ecma_ast = { version = "0.84.0", path = "../swc_ecma_ast", features = [
  #"rkyv-impl",
  #"abomonation",
  "ser_raw",
] }
swc_ecma_parser = { version = "0.111.0", path = "../swc_ecma_parser" }
ser_raw = { version = "0.0.1", path = "../../../../crates/ser_raw/ser_raw" }

[dev-dependencies]
criterion = { version = "0.4", features = ["real_blackbox"] }
swc_node_base = { version = "0.5.0", path = "../swc_node_base" }

[[bench]]
harness = false
name = "ser"
