[package]
description = "Serializers test"
edition = "2021"
name = "ser_test"
version = "0.0.1"

[[bin]]
name = "ser_test"
bench = false

[dependencies]
#abomonation = "0.7.3"
#abomonation_derive = { version = "0.5.0", path = "../../../abomonation_derive" }
#rkyv = { version = "0.7.39" }
#serde = { version = "1.0.133", features = ["derive"] }
#serde_json = "1"
ser_raw = { version = "0.0.1", path = "../../../../crates/ser_raw/ser_raw" }
swc_common = { version = "0.23.0", path = "../swc_common" }
swc_ecma_ast = { version = "0.84.0", path = "../swc_ecma_ast", features = [
    #"rkyv-impl",
    #"abomonation",
    "ser_raw",
] }
swc_ecma_parser = { version = "0.111.0", path = "../swc_ecma_parser" }
swc_node_base = { version = "0.5.0", path = "../swc_node_base" }

[dev-dependencies]
criterion = { version = "0.4", features = ["real_blackbox"] }

[[bench]]
harness = false
name = "ser"
